train drive corrections

--- a/talk.tex
+++ b/talk.tex
@@ -120,7 +120,7 @@
         \begin{column}{0.5\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/long_charged_2022.png}
+                \includegraphics[width=0.95\textwidth]{plots/long_charged_2022.png}
                 \caption{Longitudinal profile of charged particles in 100 \si{\tera\electronvolt} $e^-$ showers, 2022 workshop.}
             \end{figure}
         \end{column}
@@ -143,7 +143,7 @@
         \begin{column}{0.5\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/charge_excess_2022.png}
+                \includegraphics[width=0.95\textwidth]{plots/charge_excess_2022.png}
                 \caption{Longitudinal charge excess ($\frac{N_{e^-} - N_{e^+}}{N_{e^-} + N_{e^+}}$) in 1 \si{\tera\electronvolt} showers, 2022 workshop.}
             \end{figure}
         \end{column}
@@ -167,7 +167,7 @@
         \begin{column}{0.5\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/lateral_r_charged_2022.png}
+                \includegraphics[width=0.95\textwidth]{plots/lateral_r_charged_2022.png}
                 \caption{Lateral profiles for 100 \si{\tera\electronvolt} showers at $X_\text{max}$, 2022 workshop.}
             \end{figure}
         \end{column}
@@ -230,7 +230,7 @@
         \begin{column}{0.6\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/charge_excess_2023.png}
+                \includegraphics[width=0.95\textwidth]{plots/charge_excess_2023.png}
                 \caption{Longitudinal charge excess ($\frac{N_{e^-} - N_{e^+}}{N_{e^-} + N_{e^+}}$) in 100 \si{\tera\electronvolt} showers, current status.}
             \end{figure}
         \end{column}
@@ -255,7 +255,7 @@
         \begin{column}{0.6\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/long_charged_2023.png}
+                \includegraphics[width=0.95\textwidth]{plots/long_charged_2023.png}
                 \caption{Longitudinal profile of charged particles in 100 \si{\tera\electronvolt} showers, current status.}
             \end{figure}
         \end{column}
@@ -277,7 +277,7 @@
         \begin{column}{0.6\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/long_photon_2023_full.png}
+                \includegraphics[width=0.95\textwidth]{plots/long_photon_2023_full.png}
                 \caption{Longitudinal profile of photons in 100 \si{\tera\electronvolt} showers, current status.}
             \end{figure}
         \end{column}
@@ -300,7 +300,7 @@
         \begin{column}{0.6\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/long_photon_2023_cherenkov.png}
+                \includegraphics[width=0.95\textwidth]{plots/long_photon_2023_cherenkov.png}
                 \caption{Longitudinal profile \textbf{of photons above 20 MeV} in 100 \si{\tera\electronvolt} showers, current status.}
             \end{figure}
         \end{column}
@@ -320,14 +320,14 @@
               \begin{itemize}
                 \item[$\rightarrow$] \texttt{Highland} is a Gaussian approximation of the complete \texttt{Molière} parametrization of multiple scattering
                 \item[$\rightarrow$] The \texttt{Highland} parametrization is faster to evaluate, but neglects outliers
-                \item[$\rightarrow$] The next release of PROPOSAL will include a parametrization of \texttt{Molière} scattering with improved performance
+                \item[$\rightarrow$] Most recent release of PROPOSAL includes a parametrization of \texttt{Molière} scattering with improved performance (\texttt{MolièreInterpol})
               \end{itemize}
             \end{itemize}
         \end{column}
         \begin{column}{0.55\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/scattering_comparison.pdf}
+                \includegraphics[width=0.95\textwidth]{plots/scattering_comparison.pdf}
                 \caption{Exemplarily: Sampled scattering angles for an electron in air during a continuous step from $E_\text{i} = \SI{1}{\giga\electronvolt}$ to $E_\text{f} = \SI{0.9}{\giga\electronvolt}$, corresponding to a grammage of $X \approx \SI{3.5}{\gram\per\square\centi\meter}$.}
             \end{figure}
         \end{column}
@@ -350,7 +350,7 @@
         \begin{column}{0.6\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/lateral_Charged_r_2023.png}
+                \includegraphics[width=0.95\textwidth]{plots/lateral_Charged_r_2023.png}
                 \caption{Lateral profile of charged particles for 100 \si{\tera\electronvolt} showers at $X_\text{max}$, current status.}
             \end{figure}
         \end{column}
@@ -415,7 +415,7 @@
         \begin{column}{0.55\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/photoeffect_nist.pdf}
+                \includegraphics[width=0.95\textwidth]{plots/photoeffect_nist.pdf}
                 \caption{Photon cross sections in air, compared to tables from the NIST Standard Reference Database.}
             \end{figure}
         \end{column}
@@ -437,7 +437,7 @@
               \end{itemize}
               \item Implemented as a rejection sampling for stochastic interactions
               \begin{itemize}
-                \item[$\rightarrow$] No treatment for the change of continuous losses due to LPM implemented yet (discussion about this see \href{https://indico.scc.kit.edu/event/2580/contributions/9629/attachments/4716/7107/lpm_effect.pdf}{here})
+                \item[$\rightarrow$] No treatment for the change of continuous energy losses due to LPM implemented yet (discussion about this see \href{https://indico.scc.kit.edu/event/2580/contributions/9629/attachments/4716/7107/lpm_effect.pdf}{here})
               \end{itemize}
               \item Currently under Code Review (see \href{https://gitlab.iap.kit.edu/AirShowerPhysics/corsika/-/merge_requests/471}{here})
             \end{itemize}
@@ -445,7 +445,7 @@
         \begin{column}{0.55\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/long_charged_LPM.png}
+                \includegraphics[width=0.95\textwidth]{plots/long_charged_LPM.png}
                 \caption{Longitudinal profile for \SI{e20}{\electronvolt} showers with and without the LPM effect (simulated down to \SI{100}{\tera\electronvolt})}
             \end{figure}
         \end{column}
@@ -459,7 +459,7 @@
 \textbf{Hadronic interactions in EM showers}
 
     \begin{itemize}
-      \item Photons and charged particles can (in rare cases) interaction hadronically
+      \item Photons and charged particles can (in rare cases) interact hadronically
       \begin{itemize}
         \item[$\rightarrow$] Source of hadrons and muons from the EM component
       \end{itemize}
@@ -489,11 +489,11 @@
 
   \begin{figure}[!htb]
     \minipage{0.5\textwidth}
-      \includegraphics[width=0.9\linewidth]{plots/long_muons.png}
+      \includegraphics[width=0.95\linewidth]{plots/long_muons.png}
       \caption*{Muon distribution in 10 PeV $e^-$ showers (down to 0.5 GeV)}
     \endminipage%\hspace{3em}
     \minipage{0.5\textwidth}
-      \includegraphics[width=0.9\linewidth]{plots/long_hadron.png}
+      \includegraphics[width=0.95\linewidth]{plots/long_hadron.png}
       \caption*{Hadron distribution in 10 PeV $e^-$ showers (down to 0.5 GeV)}
     \endminipage
   \end{figure}
@@ -555,7 +555,7 @@
         \begin{column}{0.55\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[width=0.85\textwidth]{plots/long_charged_vcut.png}
+                \includegraphics[width=0.95\textwidth]{plots/long_charged_vcut.png}
                 \caption{Longitudinal profile of charged particles in 10 PeV $e^-$ showers (down to 0.5 GeV)}
             \end{figure}
         \end{column}
@@ -571,7 +571,7 @@
       \item One big advantage of PROPOSAL is its flexibility
       \begin{itemize}
         \item[$\rightarrow$] PROPOSAL can provide different parametrizations to describe physics processes
-        \item[$\rightarrow$] This can be especially interesting for parametrizations that are uncertain or to conduct simulations studies 
+        \item[$\rightarrow$] This can be especially interesting for parametrizations that are uncertain or to conduct simulations studies (e.g. for BSM physics)
       \end{itemize}
       \item Currently, CORSIKA~8 always uses a set of "default parametrizations" suggested by PROPOSAL
       \item To offer this flexibility to CORSIKA~8, we need to think about the treatment of steering within CORSIKA~8
@@ -650,12 +650,18 @@
 
     \begin{itemize}
       \item A lot of issues have been fixed since the last workshop
+      \item What has not been mentioned: A large amount of smaller and larger bugfixes that helped improved the stability of CORSIKA~8 (warnings and/or crashes)
       \begin{itemize}
-        \item[$\rightarrow$] What has not been mentioned: A large amount of smaller and larger bugfixes that helped improved the stability of CORSIKA~8
+        \item[$\rightarrow$] Much less (close to none?!) crashes due to the EM component \emoji{crossed-fingers}
       \end{itemize}
-      \item Simulations are stable now
-      \item Relevant features and processes are included by now
+      \item All relevant physics processes are included by now
       \item Some improvements and investigations are still necessary
+      \begin{itemize}
+        \item[$\rightarrow$] Lateral shower development
+        \item[$\rightarrow$] Hadronic interactions in EM showers
+        \item[$\rightarrow$] Low-energy photons
+      \end{itemize}
+      \item Elephant in the room not mentioned in this talk: Need for runtime optimization \emoji{elephant}
     \end{itemize}
 \end{frame}
 
