add prelim workshop photo

--- a/talk.tex
+++ b/talk.tex
@@ -82,7 +82,7 @@
         \end{minipage}        
         \begin{minipage}[b]{0.4\linewidth}
             \centering
-            \includegraphics[width=\textwidth]{images/photo_2023.jpg}
+            \includegraphics[width=\textwidth]{images/photo_2023_prelim.jpg}
             \caption*{CORSIKA 8 Workshop 2023}
             \label{fig:b}
         \end{minipage}
